--- a/ESP32-S3 Korvo 2/platformio.ini
+++ b/ESP32-S3 Korvo 2/platformio.ini
@@ -19,7 +19,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.3.0
 	br3ttb/PID@^1.2.1
 	br3ttb/PID-AutoTune@^1.0.0
-	olikraus/U8g2@^2.36.12
+	adafruit/Adafruit SH110X@^2.1.13
 board_build.filesystem = spiffs
 board_build.partitions = default_16MB.csv
 build_flags = 
